minor css updates

--- a/css/layout.css
+++ b/css/layout.css
@@ -980,6 +980,7 @@ small {
 	padding: 1.4em 0.7em;
 	width: 163px;
 	margin: 0px 0px 0px 10px;
+	border: 1px solid #ddd;
 }
 
 	.dbox p {
@@ -1074,11 +1075,15 @@ small {
 		display: block;
 		}
 
-	.dbox.donate h3 {
+	.dbox.donate h3,
+	.dbox.dsmall h3 {
 		padding-left: 0px;
-		color: #23300E;
 		margin: 0 0 10px 0;
-		}
+		color:#845384;
+		text-align:center;
+		letter-spacing: 2px;
+		text-transform: uppercase;
+	}
 
 	.dbox.donate h4 {
 		padding-left: 20px;
