--- a/css/typography.css
+++ b/css/typography.css
@@ -39,7 +39,15 @@ h2,dt {
 }
 	.subcol h2 { margin: 0; }
 	#sidenav h2,
-	.sidenav-sub h2 { padding: 10px 0 0 10px; }
+	.sidenav-sub h2 {
+	  padding: 10px 0 0 10px;
+	  letter-spacing: 1px;
+	  text-transform: uppercase;
+	  font-family: Helvetica, Arial, sans-serif;
+	  font-size: 1em;
+		color:#845384;
+		text-align:center;
+ }
 	h2.bulb {
 		background: url(../images/lightbulb.jpg) left top no-repeat;
 		padding: 0 0 0 25px;
