--- a/css/typography.css
+++ b/css/typography.css
@@ -40,7 +40,7 @@ h2,dt {
 	.subcol h2 { margin: 0; }
 	#sidenav h2,
 	.sidenav-sub h2 {
-	  padding: 10px 0 0 10px;
+	  padding: 3px 0 0 0;
 	  letter-spacing: 1px;
 	  text-transform: uppercase;
 	  font-family: Helvetica, Arial, sans-serif;
